--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "http": "0.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.4.5"
+    "async": "0.9.x",
+    "aws-sdk": "^2.1.17",
+    "errs": "0.3.x",
+    "eventemitter2": "0.4.x",
+    "filed": "0.1.x",
+    "gcloud": "^0.10.0",
+    "ip": "0.3.x",
+    "mime": "1.2.x",
+    "qs": "1.2.x",
+    "request": "2.40.x",
+    "s3-upload-stream": "~1.0.0",
+    "through2": "0.6.x",
+    "underscore": "1.6.x",
+    "url-join": "0.0.x",
+    "xml2js": "0.1.x",
+    "pkgcloud": "1.2.0-alpha.0"
   }
 }
