--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "underscore": "1.6.x",
     "url-join": "0.0.x",
     "xml2js": "0.1.x",
-    "pkgcloud": "1.2.0-alpha.0"
+    "pkgcloud": "1.2.0-alpha.0",
+    "pkgcloud-bluemix-objectstorage": "2.0.0"
   }
 }
