--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "0.9.x",
+    "aws-sdk": "^2.1.17",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "async": "0.9.x",
-    "aws-sdk": "^2.1.17",
     "errs": "0.3.x",
     "eventemitter2": "0.4.x",
+    "express": "~4.13.1",
     "filed": "0.1.x",
     "gcloud": "^0.10.0",
     "ip": "0.3.x",
+    "jade": "~1.11.0",
     "mime": "1.2.x",
+    "mongodb": "^2.1.7",
+    "mongoose": "^4.4.6",
+    "morgan": "~1.6.1",
+    "pkgcloud": "1.2.0-alpha.0",
     "qs": "1.2.x",
     "request": "2.40.x",
     "s3-upload-stream": "~1.0.0",
+    "serve-favicon": "~2.3.0",
     "through2": "0.6.x",
     "underscore": "1.6.x",
     "url-join": "0.0.x",
