--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "s3-upload-stream": "~1.0.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5",
+    "stream": "0.0.2",
     "through2": "0.6.x",
     "underscore": "1.6.x",
     "url-join": "0.0.x",
